--- a/app/Components/project/Project.module.scss
+++ b/app/Components/project/Project.module.scss
@@ -19,7 +19,7 @@
 .imageWrapper {
   position: relative;
   width: 500px;
-  height: 461.17px;
+  height: 500px;
   border-radius: 12px;
   overflow: hidden;
 }
@@ -28,11 +28,15 @@
   border-radius: 12px;
   width: 100%;
   height: 100%;
+  background-size: cover;
 }
 
 .overlay {
   position: absolute;
-  inset: 0;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
   background: rgba(0, 0, 0, 0.7);
   display: flex;
   align-items: center;
@@ -63,4 +67,28 @@
       flex-direction: column-reverse; 
     }
   }
+
+  .imageWrapper{
+    min-width: 410px;
+    width: calc(100% - 100px);
+    padding: 0px 50px 0px 50px;
+  }
+
+  .overlay{
+    min-width: 410px;
+    width: max(410px, calc(100% - 100px));
+    inset: 0px 50px 0px 50px;
+  }
+
+  .textWrapper {
+    min-width: 410px;
+    width: 100%;
+    padding: 0px 50px 0px 50px;
+    height: fit-content;
+  }
+
+  .iframeSizing{
+    min-width: 410px;
+  }
+  
 }
